Course seperated in different files

--- a/prettylatex.sty
+++ b/prettylatex.sty
@@ -14,6 +14,8 @@
 
 \ProcessOptions\relax % end of the options
 
+%\setcounter{tocdepth}{2}
+
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
 \usepackage[top=2cm, bottom=2cm, left=2cm, right=2cm]{geometry}
@@ -58,6 +60,10 @@
 
 \newcommand{\TL}[1]{
     \mathrm{TL} \{ #1 \}
+}
+
+\newcommand{\T}[1]{
+    \mathrm{T} \{ #1 \}
 }
 
 \newcommand{\sinc}{
